# PyTracer

./: README.md  main.py  pyproject.toml  requirements.txt
src/pytracer/: camera.py  color.py  hdrimages.py  hitrecord.py  imagetracer.py  lights.py  parser.py  ray.py  render.py  world.py
src/pytracer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pytracer/materials/: brdfs.py  material.py  pigments.py
src/pytracer/math/: geometry.py  quaternion.py  transformations.py
src/pytracer/shapes/: aabb.py  plane.py  shape.py  sphere.py
tests/: test_all.py  test_decomposition.py  test_quaternions.py
