[project]
name = "pytracer"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A raytracing library written in Python"
authors = [
    {name = "Lorenzo Conti", email = "lorenzo.conti@iit.it"}
]
maintainers = [
    {name = "Lorenzo Conti", email = "lorenzo.conti@iit.it"}
]
license.file = "LICENSE"
dependencies = [
    "jax",
    "jaxlib",
    "pytest",
    "coloredlogs",
    "pillow",
    "click"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = [
    "setuptools >= 64.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {file="src/pytracer/VERSION"}